--- a/snake.css
+++ b/snake.css
@@ -1,4 +1,9 @@
+.content {
+    width: 800px;
+    margin: auto;
+}
+
 canvas#snake {
-  border: 2px solid #333;
-  box-shadow: 4px 4px 4px #777;
+  border: 1px solid #333;
+  box-shadow: 0 4px 4px #777;
 }
