--- a/snake.css
+++ b/snake.css
@@ -1,3 +1,17 @@
+@font-face {
+    font-family: 'badaboom_bbregular';
+    src: url('src/badabb-webfont.woff2') format('woff2'),
+         url('src/badabb-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+div {
+    font-family: badaboom_bbregular;
+    letter-spacing: 2px;
+}
+
 .content {
     width: 800px;
     margin: auto;
